# mcp-server-demo

./: README.md  client.py  firecrawl_server.py  main.py  pyproject.toml  requirements.txt
